// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`select_reducer renders correctly 1`] = `
Object {
  "error": undefined,
  "order": Object {},
}
`;

exports[`select_reducer returns the correct state 1`] = `
Object {
  "error": Object {},
  "order": Object {},
}
`;
